ingress/ingress_setup.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysite

spec: 
  rules: 
  - host: www.ravilw.com
    http:
      paths:
      - path: /search
        pathType: Prefix
        backend:
          service: 
            name: mysearchd
            port: 
              number: 80

      - path: /mail
        pathType: Prefix
        backend:
          service: 
            name: maild	
            port: 
              number: 80
